# gtkdeck

./: .clang-format  .gitignore  .nvim.lua  OBS.txt  README.md  build.sh  deck_plugin.c  deck_plugin.h  gtkdeck.c  gtkdeck.gresource.xml  libwebsockets-dev_4.0.20-1_amd64.deb  libwebsockets16_4.0.20-1_amd64.deb  main.glade  meson.build  streamdeck.c  streamdeck.h  test_plugin.c  test_plugin.h
.github/workflows/: codeql-analysis.yml
assets/: deck_grid.ui  image_picker.ui  main.glade
libobsws/: libobsws.c  libobsws.h  meson.build  protocol_lws_minimal_client_echo.c
libobsws/libuwsc/: config.h  meson.build  utils.c  uwsc.c
plugins/: deck_plugin.c  deck_plugin.h  meson.build  plugins.gresource.xml  test_plugin.c  test_plugin.h
plugins/cpu_plugin/: cpu_plugin.c  cpu_plugin.h  meson.build
plugins/gtkdeck/: countdown.c  countdown.h  gtkdeck_plugin.c  gtkdeck_plugin.h  meson.build
plugins/obs_plugin/: change_scene.c  change_scene.h  meson.build  mute_source.c  mute_source.h  obs_action_types.h  obs_plugin.c  obs_plugin.h  toggle_recording.c  toggle_recording.h
plugins/obs_plugin/actions/: obs_change_scene.c  obs_chapter_marker.c  obs_mute_source.c  obs_screenshot.c  obs_toggle_recording.c  obs_toggle_source_visibility.c
plugins/system_monitor_plugin/: meson.build  system_monitor_plugin.c  system_monitor_plugin.h
plugins/system_plugin/: media.c  media.h  meson.build  system_plugin.c  system_plugin.h  text.c  website.h
streamdeck/: meson.build  stream_deck_init_mini.c  stream_deck_init_original.c  stream_deck_init_original_v2.c  stream_deck_init_xl.c  streamdeck.c
system_plugin/: system_plugin.c  text.c  text.h  website.c  website.h
ui/: deck_grid.c  deck_grid.h  gtkdeck.c  image_picker.c  image_picker.h
